# simple_password_keeper

./: .gitignore  README.md  pyproject.toml
keeper/: config.py
keeper/classes/: password.py  user.py
